tests/snapshots/lexer__strings__errors__bad_escape.snap
---
source: tests/lexer.rs
expression: "lex(r#\"\"\\x\"\"#)"
---
Err(
    LexError {
        message: "invalid escape sequence: x",
        span: Span {
            start: 0,
            end: 3,
        },
    },
)
