tests/snapshots/lexer__strings__errors__raw_newline.snap
---
source: tests/lexer.rs
expression: "lex(\"\\\"hello\\nworld\\\"\")"
---
Err(
    LexError {
        message: "string literal cannot span multiple lines: `\"hello`",
        span: Span {
            start: 0,
            end: 6,
        },
    },
)
