tests/snapshots/lexer__strings__errors__unterminated.snap
---
source: tests/lexer.rs
expression: "lex(r#\"\"hello\"#)"
---
Err(
    LexError {
        message: "unterminated string literal: `\"hello`",
        span: Span {
            start: 0,
            end: 6,
        },
    },
)
