tests/snapshots/lexer__strings__errors__unterminated_escape.snap
---
source: tests/lexer.rs
expression: "lex(\"\\\"hello\\\\\")"
---
Err(
    LexError {
        message: "unterminated escape sequence",
        span: Span {
            start: 0,
            end: 7,
        },
    },
)
